--- a/src/pages/addstore/addstore.scss
+++ b/src/pages/addstore/addstore.scss
@@ -1,5 +1,13 @@
 page-addstore {
-
+  .item{
+      margin-top:15px;
+  }
+  .box{
+      margin-top:0px !important;
+      margin-bottom: 0px !important;
+      padding-top:0px !important;
+      padding-bottom:0px !important;
+  }
 }
 .slide-zoom ,.ion-slide-content,ion-list{
 height: 100% !important;
